test/tests/compiler/3_binary_operators/valid/extra_credit/bitwise_shift_associativity_2.plx
pub fn main(none) i32 {
    return 33 >> 2 << 1
}
